--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
         {"name": "Marco Pivetta", "email": "ocramius@gmail.com"}
     ],
     "minimum-stability": "dev",
+    "replace": {
+        "doctrine/orm": "2.5.*"
+    },
     "require": {
         "php": "^5.6 || ^7.0",
         "ext-pdo": "*",
