--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "minimum-stability": "dev",
     "replace": {
-        "doctrine/orm": "2.5.*"
+        "doctrine/orm"
     },
     "require": {
         "php": "^5.6 || ^7.0",
