--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "stas29a/orm",
+    "name": "doctrine/orm",
     "type": "library",
     "description": "Doctrine 2 fork with improvements",
     "keywords": ["orm", "database"],
@@ -39,7 +39,7 @@
     "bin": ["bin/doctrine"],
     "extra": {
         "branch-alias": {
-            "dev-master": "2.6.x-dev"
+            "dev-master": "2.5.x-dev"
         }
     },
     "archive": {
