--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         {"name": "Jonathan Wage", "email": "jonwage@gmail.com"},
         {"name": "Marco Pivetta", "email": "ocramius@gmail.com"}
     ],
+    "replace": {
+        "doctrine/orm": "*"
+    },
     "minimum-stability": "dev",
     "require": {
         "php": "^5.6 || ^7.0",
